# LaserEmbeddings

./: CMakeLists.txt  README.txt  manifest.xml  scanager
src/bag_to_image/: CMakeLists.txt  analyze_scans.cpp  bag_to_images.cpp  shared_structs.h  synthesize_query_scan.cpp  templates.txt
src/gui/: gui_publisher_helper.h  vector_display_main.cpp  vector_display_thread.cpp  vector_display_thread.h
src/python/: .convert_png_to_numpy.py.swp  .need_discriptive_name.py.swp  Digraph.gv  convert_png_to_numpy.py  need_discriptive_name.py  network_definitions.py  network_definitions_old.py  pytorch_first_nn.py  pytorch_tutorial.py  query_manager.py  testing_and_eval.py  training.py  training_and_def.py  training_and_def_net1.py  training_and_def_net2.py  training_and_def_net3.py
